
    - Hooked up exception interceptors so they get called now.
    
    - Rev'd the statement interceptor interface to pass on some server flags, warning counts and errors. See 
      the com.mysql.jdbc.StatementInteceptorsV2 interface for more details. The driver will create adaptors to
      transparently convert older implementations to the newer interface at runtime.
    
09-22-09 - Version 5.1.10

    - Fix for BUG#47494 - Non standard port numbers in the URL are not honored.

09-16-09 - Version 5.1.9

    - The driver has been OSGi-ified. The bundle symbolic name is "com.mysql.jdbc", see META-INF/MANIFEST.MF to see
      what interfaces we export.
      
    - Fixed BUG#45040, adding missing tags from SVN import to BZR branch for
      5.1.
      
    - Fix for a variant of Bug#41484 - ResultSet.find*(String) failed when using cached result set
      metadata.
      
    - Fixed BUG#46637 - When the driver encounters an error condition that causes it to create a 
      CommunicationsException, it tries to build a friendly error message that helps diagnose 
      what is wrong. However, if there has been no network packets received from the server, 
      the error message contains bogus information like:

      "The last packet successfully received from the server was 1,249,932,468,916 milliseconds ago.  
      The last packet sent successfully to the server was 0 milliseconds ago."
      
      Now the error message states that it has never received any packets from the server in this
      scenario.
      
    - Added a new option, "queryTimeoutKillsConnection", when set to "true" will cause timeouts set
      by Statement.setQueryTimeout() to forcibly kill the connection, not just the query.
      
    - Fixed BUG#32216, "PORT" property filled in by Driver.parseURL() not always present. The driver 
      will now always fill in the "PORT" (using 3306 if not specified) property, and the "HOST" property 